# chips-sim

./: .gitignore  .vectors.mac.swo  CMakeLists.txt  GNUmakefile  README  README.md  WCSim.cc  WCSim.sh  WCSim.sh.e5438052  WCSim.sh.e5441705  WCSim.sh.o5438052  WCSim.sh.o5441705  WCSim2.sh  WCSim2.sh.e5438053  WCSim2.sh.e5441706  WCSim2.sh.o5438053  WCSim2.sh.o5441706  WCSim_cc.d  chips-sim-config.cmake  clean.sh  evDisplay.cc  generic_chip.mac  generic_chips.mac  geoSetup.mac  geofile.txt  geometryHelper.cc  novis.mac  setup.sh  setupWCSim.sh  sim-setup.sh  sim-tidy.sh  tidy.sh  tuning_parameters.mac  vectors.mac  vectors2.mac  wcsim.root
attenuation/: att_scaling.py  attenuation.C  scaling.py
config/: geometryDefinitions.xml  geometry_definitions.xml  jobOptions.mac  job_options.mac  lcDefinitions.xml  lc_definitions.xml  pmtDefinitions.xml  pmt_definitions.xml  simplots.C  tuning_parameters.mac
config/attenuation/: attenuation.C  scaling.py
config/example/: emission_geo.mac  emission_profiles.mac  example.mac  example_events.vec  example_vis.mac
config/example/scripts/: pmtremove.C  read_PMT.C  read_number_of_PMTs.C  sample_readfile.C  testgeo.C  total_charge.C
config/geom/: chips_1200_nolc.mac
example/: generic_chips.mac  generic_chips_vis.mac  geoSetup.mac
include/: WCSimCHIPSPMT.hh  WCSimCherenkovBuilder.hh  WCSimDetectorConstruction.hh  WCSimDetectorMessenger.hh  WCSimDetectorZone.hh  WCSimEmissionProfileMaker.hh  WCSimEvDisplay.hh  WCSimEventAction.hh  WCSimGeoConfig.hh  WCSimGeoManager.hh  WCSimGeometryEnums.hh  WCSimGeometryHelper.hh  WCSimLCConfig.hh  WCSimLCManager.hh  WCSimMaterialsBuilder.hh  WCSimPMTBuilder.hh  WCSimPMTConfig.hh  WCSimPMTManager.hh  WCSimPMTParams.hh  WCSimPhotonNtuple.hh  WCSimPhysicsList.hh  WCSimPhysicsListFactory.hh  WCSimPhysicsListFactoryMessenger.hh  WCSimPhysicsMessenger.hh  WCSimPmtInfo.hh  WCSimPolygonTools.hh  WCSimPrimaryGeneratorAction.hh  WCSimPrimaryGeneratorMessenger.hh  WCSimRandomMessenger.hh  WCSimRandomParameters.hh  WCSimRootEvent.hh  WCSimRootGeom.hh  WCSimRootLinkDef.hh  WCSimRunAction.hh  WCSimRunActionMessenger.hh  WCSimSK1pePMT.hh  WCSimStackingAction.hh  WCSimSteppingAction.hh  WCSimTOTPMT.hh  WCSimTrackInformation.hh  (+12 more)
include/rapidxml-1.13/: rapidxml_print.hpp
sample-root-scripts/: read_PMT.C  read_number_of_PMTs.C  sample_readfile.C  testgeo.C  total_charge.C
setupScripts/: setupWCSimUCL.sh  setupWCSimYibin.sh
src/: .WCSimPrimaryGeneratorAction.cc.swn  WCSimCHIPSPMT.cc  WCSimCherenkovBuilder.cc  WCSimConstructGeometryTables.cc  WCSimConstructMaterials.cc  WCSimConstructPMT.cc  WCSimConstructWC.cc  WCSimDefineGeometry.cc  WCSimDetectorConstruction.cc  WCSimDetectorMessenger.cc  WCSimDetectorZone.cc  WCSimEmissionProfileMaker.cc  WCSimEvDisplay.cc  WCSimEventAction.cc  WCSimGeoConfig.cc  WCSimGeoManager.cc  WCSimGeometryHelper.cc  WCSimLCConfig.cc  WCSimLCManager.cc  WCSimMaterialsBuilder.cc  WCSimPMTBuilder.cc  WCSimPMTConfig.cc  WCSimPMTManager.cc  WCSimPMTParams.cc  WCSimPhotonNtuple.cc  WCSimPhysicsList.cc  WCSimPhysicsListFactory.cc  WCSimPhysicsListFactoryMessenger.cc  WCSimPhysicsMessenger.cc  WCSimPmtInfo.cc  WCSimPolygonTools.cc  WCSimPrimaryGeneratorAction.cc  WCSimPrimaryGeneratorMessenger.cc  WCSimRandomMessenger.cc  WCSimRootDict.cc  WCSimRootDict.h  WCSimRootEvent.cc  WCSimRootGeom.cc  WCSimRunAction.cc  WCSimRunActionMessenger.cc  (+17 more)
src/apps/: WCSim.cc  chipssim.cc  geomhelper.cc  simDisplay.cc  simdisplay.cc
src/base/: WCSimCHIPSPMT.cc  WCSimCherenkovBuilder.cc  WCSimConstructGeometryTables.cc  WCSimConstructMaterials.cc  WCSimConstructPMT.cc  WCSimConstructWC.cc  WCSimDefineGeometry.cc  WCSimDetectorConstruction.cc  WCSimEmissionProfileMaker.cc  WCSimEvDisplay.cc  WCSimEventAction.cc  WCSimGeoConfig.cc  WCSimGeoManager.cc  WCSimGeometryHelper.cc  WCSimLCManager.cc  WCSimMaterialsBuilder.cc  WCSimPMTBuilder.cc  WCSimPMTManager.cc  WCSimPhotonNtuple.cc  WCSimPrimaryGeneratorAction.cc  WCSimRandomMessenger.cc  WCSimRootEvent.cc  WCSimRootGeom.cc  WCSimSK1pePMT.cc  WCSimStackingAction.cc  WCSimSteppingAction.cc  WCSimTOTPMT.cc  WCSimTrackingAction.cc  WCSimTrackingActionMessenger.cc  WCSimTrajectory.cc  WCSimTruthSummary.cc  WCSimTuningMessenger.cc  WCSimTuningParameters.cc  WCSimUnitCell.cc  WCSimVisManager.cc  WCSimWCDigi.cc  WCSimWCDigitizer.cc  WCSimWCHit.cc  WCSimWCSD.cc
